assignment4/target/MCParser.py
# Generated from main/mc/parser/MC.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class MCParser ( Parser ):

    grammarFileName = "MC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'boolean'", "'break'", "'continue'", "'else'", "'for'", 
                     "'float'", "'if'", "'int'", "'return'", "'void'", "'do'", 
                     "'while'", "'true'", "'false'", "'string'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'!'", "'||'", "'&&'", 
                     "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'='", 
                     "<INVALID>", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "';'", "','" ]

    symbolicNames = [ "<INVALID>", "WS", "BLOCK_COMMENT", "LINE_COMMENT", 
                      "INTLIT", "FLOATLIT", "BOOLEANLIT", "STRINGLIT", "BOOLEAN", 
                      "BREAK", "CONTINUE", "ELSE", "FOR", "FLOAT", "IF", 
                      "INT", "RETURN", "VOID", "DO", "WHILE", "TRUE", "FALSE", 
                      "STRING", "ADD", "SUB", "MUL", "DIV", "MOD", "NOT", 
                      "OR", "AND", "EQ", "NEQ", "LT", "LEQ", "GT", "GEQ", 
                      "ASSIGN", "ID", "LB", "RB", "LP", "RP", "LS", "RS", 
                      "SEMI", "COMMA", "ERROR_CHAR", "ILLEGAL_ESCAPE", "UNCLOSE_STRING", 
                      "NL" ]

    RULE_program = 0
    RULE_manyDecls = 1
    RULE_decl = 2
    RULE_varDecl = 3
    RULE_var = 4
    RULE_funcDecl = 5
    RULE_returnType = 6
    RULE_paraList = 7
    RULE_paraDecl = 8
    RULE_blockStmt = 9
    RULE_blockMem = 10
    RULE_stmt = 11
    RULE_ifStmt = 12
    RULE_dowhileStmt = 13
    RULE_forStmt = 14
    RULE_breakStmt = 15
    RULE_contStmt = 16
    RULE_returnStmt = 17
    RULE_expStmt = 18
    RULE_exp = 19
    RULE_exp1 = 20
    RULE_exp2 = 21
    RULE_exp3 = 22
    RULE_exp4 = 23
    RULE_exp5 = 24
    RULE_exp6 = 25
    RULE_exp7 = 26
    RULE_exp8 = 27
    RULE_exp9 = 28
    RULE_invokeExp = 29
    RULE_inArrPtrType = 30
    RULE_outArrPtrType = 31
    RULE_primType = 32

    ruleNames =  [ "program", "manyDecls", "decl", "varDecl", "var", "funcDecl", 
                   "returnType", "paraList", "paraDecl", "blockStmt", "blockMem", 
                   "stmt", "ifStmt", "dowhileStmt", "forStmt", "breakStmt", 
                   "contStmt", "returnStmt", "expStmt", "exp", "exp1", "exp2", 
                   "exp3", "exp4", "exp5", "exp6", "exp7", "exp8", "exp9", 
                   "invokeExp", "inArrPtrType", "outArrPtrType", "primType" ]

    EOF = Token.EOF
    WS=1
    BLOCK_COMMENT=2
    LINE_COMMENT=3
    INTLIT=4
    FLOATLIT=5
    BOOLEANLIT=6
    STRINGLIT=7
    BOOLEAN=8
    BREAK=9
    CONTINUE=10
    ELSE=11
    FOR=12
    FLOAT=13
    IF=14
    INT=15
    RETURN=16
    VOID=17
    DO=18
    WHILE=19
    TRUE=20
    FALSE=21
    STRING=22
    ADD=23
    SUB=24
    MUL=25
    DIV=26
    MOD=27
    NOT=28
    OR=29
    AND=30
    EQ=31
    NEQ=32
    LT=33
    LEQ=34
    GT=35
    GEQ=36
    ASSIGN=37
    ID=38
    LB=39
    RB=40
    LP=41
    RP=42
    LS=43
    RS=44
    SEMI=45
    COMMA=46
    ERROR_CHAR=47
    ILLEGAL_ESCAPE=48
    UNCLOSE_STRING=49
    NL=50

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def manyDecls(self):
            return self.getTypedRuleContext(MCParser.ManyDeclsContext,0)


        def EOF(self):
            return self.getToken(MCParser.EOF, 0)

        def getRuleIndex(self):
            return MCParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.manyDecls()
            self.state = 67
            self.match(MCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ManyDeclsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MCParser.DeclContext,0)


        def manyDecls(self):
            return self.getTypedRuleContext(MCParser.ManyDeclsContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_manyDecls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitManyDecls" ):
                return visitor.visitManyDecls(self)
            else:
                return visitor.visitChildren(self)




    def manyDecls(self):

        localctx = MCParser.ManyDeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_manyDecls)
        try:
            self.state = 73
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.decl()
                self.state = 70
                self.manyDecls()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(MCParser.VarDeclContext,0)


        def funcDecl(self):
            return self.getTypedRuleContext(MCParser.FuncDeclContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MCParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 77
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 75
                self.varDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 76
                self.funcDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primType(self):
            return self.getTypedRuleContext(MCParser.PrimTypeContext,0)


        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.VarContext)
            else:
                return self.getTypedRuleContext(MCParser.VarContext,i)


        def SEMI(self):
            return self.getToken(MCParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.COMMA)
            else:
                return self.getToken(MCParser.COMMA, i)

        def getRuleIndex(self):
            return MCParser.RULE_varDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = MCParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.primType()
            self.state = 80
            self.var()
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MCParser.COMMA:
                self.state = 81
                self.match(MCParser.COMMA)
                self.state = 82
                self.var()
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 88
            self.match(MCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def INTLIT(self):
            return self.getToken(MCParser.INTLIT, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_var

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar" ):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)




    def var(self):

        localctx = MCParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var)
        try:
            self.state = 95
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.match(MCParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.match(MCParser.ID)
                self.state = 92
                self.match(MCParser.LS)
                self.state = 93
                self.match(MCParser.INTLIT)
                self.state = 94
                self.match(MCParser.RS)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def returnType(self):
            return self.getTypedRuleContext(MCParser.ReturnTypeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def blockStmt(self):
            return self.getTypedRuleContext(MCParser.BlockStmtContext,0)


        def paraList(self):
            return self.getTypedRuleContext(MCParser.ParaListContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_funcDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDecl" ):
                return visitor.visitFuncDecl(self)
            else:
                return visitor.visitChildren(self)




    def funcDecl(self):

        localctx = MCParser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funcDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.returnType()
            self.state = 98
            self.match(MCParser.ID)
            self.state = 99
            self.match(MCParser.LB)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.BOOLEAN) | (1 << MCParser.FLOAT) | (1 << MCParser.INT) | (1 << MCParser.STRING))) != 0):
                self.state = 100
                self.paraList()


            self.state = 103
            self.match(MCParser.RB)
            self.state = 104
            self.blockStmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primType(self):
            return self.getTypedRuleContext(MCParser.PrimTypeContext,0)


        def outArrPtrType(self):
            return self.getTypedRuleContext(MCParser.OutArrPtrTypeContext,0)


        def VOID(self):
            return self.getToken(MCParser.VOID, 0)

        def getRuleIndex(self):
            return MCParser.RULE_returnType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnType" ):
                return visitor.visitReturnType(self)
            else:
                return visitor.visitChildren(self)




    def returnType(self):

        localctx = MCParser.ReturnTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_returnType)
        try:
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.primType()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.outArrPtrType()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 108
                self.match(MCParser.VOID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParaListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paraDecl(self):
            return self.getTypedRuleContext(MCParser.ParaDeclContext,0)


        def COMMA(self):
            return self.getToken(MCParser.COMMA, 0)

        def paraList(self):
            return self.getTypedRuleContext(MCParser.ParaListContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_paraList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParaList" ):
                return visitor.visitParaList(self)
            else:
                return visitor.visitChildren(self)




    def paraList(self):

        localctx = MCParser.ParaListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_paraList)
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.paraDecl()
                self.state = 112
                self.match(MCParser.COMMA)
                self.state = 113
                self.paraList()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.paraDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParaDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primType(self):
            return self.getTypedRuleContext(MCParser.PrimTypeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_paraDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParaDecl" ):
                return visitor.visitParaDecl(self)
            else:
                return visitor.visitChildren(self)




    def paraDecl(self):

        localctx = MCParser.ParaDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_paraDecl)
        try:
            self.state = 126
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.primType()
                self.state = 119
                self.match(MCParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.primType()
                self.state = 122
                self.match(MCParser.ID)
                self.state = 123
                self.match(MCParser.LS)
                self.state = 124
                self.match(MCParser.RS)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(MCParser.LP, 0)

        def RP(self):
            return self.getToken(MCParser.RP, 0)

        def blockMem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.BlockMemContext)
            else:
                return self.getTypedRuleContext(MCParser.BlockMemContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_blockStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockStmt" ):
                return visitor.visitBlockStmt(self)
            else:
                return visitor.visitChildren(self)




    def blockStmt(self):

        localctx = MCParser.BlockStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_blockStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(MCParser.LP)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.INTLIT) | (1 << MCParser.FLOATLIT) | (1 << MCParser.BOOLEANLIT) | (1 << MCParser.STRINGLIT) | (1 << MCParser.BOOLEAN) | (1 << MCParser.BREAK) | (1 << MCParser.CONTINUE) | (1 << MCParser.FOR) | (1 << MCParser.FLOAT) | (1 << MCParser.IF) | (1 << MCParser.INT) | (1 << MCParser.RETURN) | (1 << MCParser.DO) | (1 << MCParser.STRING) | (1 << MCParser.SUB) | (1 << MCParser.NOT) | (1 << MCParser.ID) | (1 << MCParser.LB) | (1 << MCParser.LP))) != 0):
                self.state = 129
                self.blockMem()
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 135
            self.match(MCParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockMemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(MCParser.VarDeclContext,0)


        def stmt(self):
            return self.getTypedRuleContext(MCParser.StmtContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_blockMem

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockMem" ):
                return visitor.visitBlockMem(self)
            else:
                return visitor.visitChildren(self)




    def blockMem(self):

        localctx = MCParser.BlockMemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_blockMem)
        try:
            self.state = 139
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.BOOLEAN, MCParser.FLOAT, MCParser.INT, MCParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.varDecl()
                pass
            elif token in [MCParser.INTLIT, MCParser.FLOATLIT, MCParser.BOOLEANLIT, MCParser.STRINGLIT, MCParser.BREAK, MCParser.CONTINUE, MCParser.FOR, MCParser.IF, MCParser.RETURN, MCParser.DO, MCParser.SUB, MCParser.NOT, MCParser.ID, MCParser.LB, MCParser.LP]:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifStmt(self):
            return self.getTypedRuleContext(MCParser.IfStmtContext,0)


        def dowhileStmt(self):
            return self.getTypedRuleContext(MCParser.DowhileStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(MCParser.ForStmtContext,0)


        def breakStmt(self):
            return self.getTypedRuleContext(MCParser.BreakStmtContext,0)


        def contStmt(self):
            return self.getTypedRuleContext(MCParser.ContStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(MCParser.ReturnStmtContext,0)


        def expStmt(self):
            return self.getTypedRuleContext(MCParser.ExpStmtContext,0)


        def blockStmt(self):
            return self.getTypedRuleContext(MCParser.BlockStmtContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = MCParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_stmt)
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.IF]:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.ifStmt()
                pass
            elif token in [MCParser.DO]:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.dowhileStmt()
                pass
            elif token in [MCParser.FOR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 143
                self.forStmt()
                pass
            elif token in [MCParser.BREAK]:
                self.enterOuterAlt(localctx, 4)
                self.state = 144
                self.breakStmt()
                pass
            elif token in [MCParser.CONTINUE]:
                self.enterOuterAlt(localctx, 5)
                self.state = 145
                self.contStmt()
                pass
            elif token in [MCParser.RETURN]:
                self.enterOuterAlt(localctx, 6)
                self.state = 146
                self.returnStmt()
                pass
            elif token in [MCParser.INTLIT, MCParser.FLOATLIT, MCParser.BOOLEANLIT, MCParser.STRINGLIT, MCParser.SUB, MCParser.NOT, MCParser.ID, MCParser.LB]:
                self.enterOuterAlt(localctx, 7)
                self.state = 147
                self.expStmt()
                pass
            elif token in [MCParser.LP]:
                self.enterOuterAlt(localctx, 8)
                self.state = 148
                self.blockStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(MCParser.IF, 0)

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def exp(self):
            return self.getTypedRuleContext(MCParser.ExpContext,0)


        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.StmtContext)
            else:
                return self.getTypedRuleContext(MCParser.StmtContext,i)


        def ELSE(self):
            return self.getToken(MCParser.ELSE, 0)

        def getRuleIndex(self):
            return MCParser.RULE_ifStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)




    def ifStmt(self):

        localctx = MCParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_ifStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(MCParser.IF)
            self.state = 152
            self.match(MCParser.LB)
            self.state = 153
            self.exp()
            self.state = 154
            self.match(MCParser.RB)
            self.state = 155
            self.stmt()
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 156
                self.match(MCParser.ELSE)
                self.state = 157
                self.stmt()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DowhileStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DO(self):
            return self.getToken(MCParser.DO, 0)

        def WHILE(self):
            return self.getToken(MCParser.WHILE, 0)

        def exp(self):
            return self.getTypedRuleContext(MCParser.ExpContext,0)


        def SEMI(self):
            return self.getToken(MCParser.SEMI, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.StmtContext)
            else:
                return self.getTypedRuleContext(MCParser.StmtContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_dowhileStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDowhileStmt" ):
                return visitor.visitDowhileStmt(self)
            else:
                return visitor.visitChildren(self)




    def dowhileStmt(self):
